<resources>
    <string name="app_name">IMChat</string>
    <string name="button1_text">列表</string>
    <string name="button2_text">单聊</string>
    <string name="button3_text">群聊</string>
    <string name="discussion_button1_text">创建讨论组</string>
    <string name="discussion_button2_text">加入群组</string>
    <string name="discussion_button3_text">进入群组讨论</string>
    <string name="login_btn1_text">连接用户1</string>
    <string name="login_btn2_text">连接用户2</string>
    <string name="login_btn3_text">连接用户3</string>
    <string name="main_bt2">开启会话</string>
    <string name="main_bt3">开启会话列表</string>
    <string name="main_bt4">开启聚合会话列表</string>
    <string name="main_bt5">创建讨论组</string>
    <string name="main_bt6">加入群组</string>
</resources>
