<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#e4e4e4"
    tools:context=".Activity.MainActivity">


    <include layout="@layout/actionbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <Button
                android:id="@+id/bt2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_bt2" />

            <Button
                android:id="@+id/bt3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_bt3" />

            <Button
                android:id="@+id/bt4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_bt4" />

            <Button
                android:id="@+id/bt5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_bt5" />

            <Button
                android:id="@+id/bt6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_bt6" />
        </LinearLayout>

    </ScrollView>
</LinearLayout>
